tests/ui/issues/issue-27842.stderr
error[E0608]: cannot index into a value of type `({integer}, {integer}, {integer})`
  --> $DIR/issue-27842.rs:4:13
   |
LL |     let _ = tup[0];
   |             ^^^^^^ help: to access tuple elements, use: `tup.0`

error[E0608]: cannot index into a value of type `({integer}, {integer}, {integer})`
  --> $DIR/issue-27842.rs:9:13
   |
LL |     let _ = tup[i];
   |             ^^^^-^
   |                 |
   |                 cannot access tuple elements at a variable index
   |
   = help: to access tuple elements, use tuple indexing syntax (e.g., `tuple.0`)

error[E0608]: cannot index into a value of type `({integer},)`
  --> $DIR/issue-27842.rs:14:13
   |
LL |     let _ = tup[3];
   |             ^^^^^^
   |
   = help: to access tuple elements, use tuple indexing syntax (e.g., `tuple.0`)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0608`.
